[gd_scene load_steps=4 format=2]

[ext_resource path="res://Title_screen/Pause.gd" type="Script" id=1]
[ext_resource path="res://Title_screen/hyperspace_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Title_screen/go_to_game.gd" type="Script" id=3]

[node name="CanvasLayer" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="Pause" type="Control" parent="." index="0"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 989.0
margin_bottom = 558.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Overlay" type="ColorRect" parent="Pause" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 0.352941 )
_sections_unfolded = [ "Pause" ]

[node name="return_title" type="Button" parent="Pause/Overlay" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 277.0
margin_top = 162.0
margin_right = 760.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "return to title"
flat = true
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Pause", "custom_fonts" ]

[connection signal="pressed" from="Pause/Overlay/return_title" to="Pause/Overlay/return_title" method="_on_return_title_pressed"]


